--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-#jumboHeader {
-  color: white;
-  background-color: #6d532b;
-  text-align: center;
-}
-
 #card {
   border-color: #2c75c3;
 }
@@ -16,4 +10,8 @@
 #submitBtn {
   color: white;
   background-color: #2c75c3;
+}
+
+.table-hover>tbody>tr:hover .fas {
+  visibility: visible !important;
 }
